infrastructure/services/dev/e2e-platform/policies/tests/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaces:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: e2e-platform
    labels:
      eliorion.fr/tier: e2e
- apiVersion: v1
  kind: Namespace
  metadata:
    name: e2e-bare
    labels:
      eliorion.fr/tier: e2e
